# WhisperMobile

./: .dockerignore  .gitignore  Dockerfile  SECURITY_AUDIT.md  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/whisper/mobile/: WhisperApp.kt  WhisperLib.kt
app/src/main/java/com/whisper/mobile/audio/: AudioRecorder.kt
app/src/main/java/com/whisper/mobile/ime/: ImeUi.kt  WhisperIME.kt
app/src/main/java/com/whisper/mobile/model/: ModelManager.kt
app/src/main/java/com/whisper/mobile/ui/: MainActivity.kt
app/src/main/java/com/whisper/mobile/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_mic.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/xml/: method.xml  network_security_config.xml
gradle/: libs.versions.toml
